# megacross

./: .dockerignore  .gitignore  README.md  crossword.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.tsbuildinfo  vitest.setup.ts  workdict.ts
app/actions/: scanwords.ts
components/dictionary/: TemplatePicker.tsx
components/scanwords/: ScanwordsLists.tsx  ScanwordsWorkspace.tsx
components/upload/: UploadPanel.tsx
cross/: .gitignore
cross/server/: .dockerignore  Dockerfile  biome.json  entrypoint.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crossnext/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  auth.ts  biome.json  docker-compose.yml  entrypoint.sh  i18n.ts  next.config.ts  package.json  playwright.config.ts  pnpm-config.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  proxy.ts  sanitize-router-state-header.cjs  skills-lock.json  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
crossnext/app/: error.tsx  globals.css  layout.tsx  not-found.tsx
crossnext/components/: AppHeader.tsx  LanguageSwitcher.tsx  PendingActions.tsx  PendingNavLink.tsx  ThemeSwitcher.tsx  UserMenu.tsx
crossnext/lib/: db.ts  (+19 more)
docs/: docker-cutover.md
lib/: scanwordWordImages.ts
messages/: en.json  ru.json  uk.json
server/: .biomeignore  AGENTS.md  Dockerfile  biome.json  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
server/native/dlx-solver/: Cargo.toml  README.md  package.json
server/native/dlx-solver/src/: lib.rs
tests/: mocks.ts
words/: tsconfig.json
(+350 files in other folders)
